# mobile-manipulator

./: README.md
src/base/: CMakeLists.txt  package.xml
src/base/launch/: multi_goal_nav.launch
src/base/scripts/: multi_goal_script.py
src/gui/: package.xml
src/gui2/: CMakeLists.txt
src/gui2/scripts/: GUI.py
src/human_and_pose/: CMakeLists.txt  README.md  human.json  package.xml  predict.json  requirements.txt  setup.py
src/human_and_pose/launch/: .human_hand.launch.swp  human_hand.launch
src/human_and_pose/src/: human_and_hand.py
src/main/: package.xml
src/main/launch/: human.launch  main.launch  robot.launch  tool.launch
src/main/scripts/: demo_with_yolo.py  main_script.py  with_base.py
src/tool_detect/: CMakeLists.txt  README.md  package.xml  predict.json  tool_detect.json
src/tool_detect/launch/: tool_detect.launch
src/tool_detect/scripts/: model_test.py
src/tool_detect/src/: tool_detect.py
