<?xml version="1.0"?>
<package format="2">
  <name>human_and_pose</name>
  <version>1.0.0</version>
  <description>The human_and_pose package</description>

  <maintainer email="cam@todo.todo">cam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
